--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,11 @@
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
 
+    = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Montserrat:300"
+
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
+    = javascript_include_tag('https://maps.googleapis.com/maps/api/js?key=AIzaSyDfamJ3i1uM6Yc61FW0HeaKCRlE-imBH8U&libraries=places')
 
     = javascript_include_tag 'typeahead'
 
