--- a/app/assets/stylesheets/make_it_easy.scss
+++ b/app/assets/stylesheets/make_it_easy.scss
@@ -43,7 +43,7 @@ li:hover{
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 $transalt-orange: #ff4500;
@@ -55,13 +55,12 @@ $transalt-orange: #ff4500;
 }*/
 
 #page_header {
-  /*background-color: red;*/
   margin-right: auto;
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
   width: 100%;
-  background-color: #eee;
+  background-color: #fff;
 }
 
 #page_header h1.title {
@@ -71,11 +70,12 @@ $transalt-orange: #ff4500;
 
 .footer {
   position: fixed;
-  bottom: 0;
   left: 0;
   right: 0;
-  background-color: #47B2B2;
+  background-color: #0dc50d;
   height: 75px;
+
+  cursor: pointer;
 }
 
 .footer-text {
@@ -87,11 +87,33 @@ $transalt-orange: #ff4500;
   line-height: 75px;
 }
 
+.footer-text a {
+  color: #fff;
+}
 
-@media (min-width: 576px) {
-  #filters {
-    padding: 0 15px;
-  }
+
+.notification-box {
+  background-color: #29b9e7;
+  height: 75px;
+}
+
+.notification-box .notification {
+  color: #fff;
+  font-size: 18pt;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 75px;
+}
+
+
+
+#filters {
+  margin: 30px 0px;
+}
+
+#filters .input-group {
+  margin: 15px 0;
 }
 
 #filters .twitter-typeahead, #filters .tt-input {
@@ -99,16 +121,86 @@ $transalt-orange: #ff4500;
 }
 
 #filters .filter-buttons {
-  margin: 16px 0;
+  margin: 15px 0;
+}
+
+@media (max-width: 575px) {
+  #filters .filter-buttons {
+    display: none;
+  }
 }
 
 #filters .filter-buttons li {
+  color: #fff;
+
   display: inline-block;
   text-align: center;
 }
 
-#filters .filter-buttons li i {
+#filters .filter-buttons li div.search-button {
+  padding: 5px;
+  cursor: pointer;
 
+  background-color: transparent;
+  border: 1px solid #ff804f;
+  border-radius: .25rem;
+  color: #ff804f;
+
+  font-weight: 400;
+  font-size: 1rem;
+
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+#filters .filter-buttons li div.search-button:hover {
+  color: #fff;
+  background-color: #ff804f;
+}
+
+#filters .filter-buttons li div.search-button.active {
+  color: #fff;
+  background-color: #ff804f;
+}
+
+@media (max-width: 575px) {
+  #filters .filter-buttons li div.search-button {
+    margin: 10px;
+  }
+}
+
+
+
+.sign-all {
+  margin: 0 0 30px;
+}
+
+.sign-all button {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.results-header p {
+  padding: 0 15px;
+  margin: 1rem 0;
+  text-align: center;
+  font-size: 16pt;
+}
+
+.results-header p span.search-term {
+  font-weight: bold;
 }
 
 /*.card {
@@ -135,6 +227,14 @@ $transalt-orange: #ff4500;
   color: rgba(0, 123, 255, 0.5);
 }
 
+
+.card .campaign .campaign-details div.col.sign {
+  cursor: pointer;
+}
+
+.card .campaign .campaign-details div.col.to-be-signed {
+  cursor: pointer;
+}
 
 .card .campaign .campaign-details div.col.citywide {
   background-color: rgba(255, 179, 71, 0.25);
@@ -242,22 +342,6 @@ $transalt-orange: #ff4500;
 
 
 
-
-
-.card .card-block .campaign h3.campaign-description {
-  text-align: center;
-}
-
-.card .card-block .campaign h3.campaign-link {
-  color: #0074d9;
-}
-
-.card .card-block .campaign .campaign-name {
-  width: 50%;
-}
-
-
-
 .card .campaign .campaign-name {
   /*text-align: center;*/
 }
@@ -271,6 +355,31 @@ $transalt-orange: #ff4500;
 }
 
 
+.card .campaign li.success-list-item {
+  background-color: #e9632d;
+  color: #fff;
+}
+
+
+.card .campaign li.description-list-item.d-block {
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+
+.card .campaign li.signatures-list-item .progress {
+  margin-top: 0.5rem;
+}
 
 .card .campaign .card-text:last-child {
   margin: 0 0 5px;
@@ -321,12 +430,32 @@ $transalt-orange: #ff4500;
 
 
 .all-campaigns-body {
-  background-color: #f9f9f9;
+  background-color: #f3f2f1;
 }
 
 .campaign-list {
-  margin: 10px 0 75px;
+  margin: 20px 0 35px;
+  padding: 0 0 35px ;
 }
+
+.campaign-list.matching {
+  border-bottom: 2px solid #333;
+}
+
+.campaign-list.not-matching .campaign {
+  background-color: #e9e9e9;
+}
+
+.campaign-list.not-matching .campaign ul.campaign-details li.list-group-item {
+  background-color: #e9e9e9;
+}
+
+.campaign-list.not-matching .campaign ul.campaign-details li.success-list-item {
+  color: #000;
+}
+
+
+
 
 span.sans {
   display: block;
@@ -373,7 +502,7 @@ span.twitter-typeahead .tt-menu {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem; 
+  border-radius: 0.25rem;
   width: 100%;}
 
 span.twitter-typeahead .tt-suggestion {
@@ -390,6 +519,9 @@ span.twitter-typeahead .tt-suggestion {
   border: 0;
   text-overflow: ellipsis;
   overflow: hidden;}
+span.twitter-typeahead .tt-suggestion strong.tt-highlight {
+  /*font-weight: normal*/
+};
 span.twitter-typeahead .tt-suggestion:focus, .dropdown-item:hover, span.twitter-typeahead .tt-suggestion:hover {
     color: #2b2d2f;
     text-decoration: none;
@@ -421,4 +553,17 @@ span.twitter-typeahead .tt-header {
   padding: 3px 0;
   border-bottom: 1px solid #ccc;
 }
+
+@media (max-width: 480px) {
+  span.twitter-typeahead .tt-suggestion {
+    text-overflow: initial;
+    white-space: normal;
+    word-wrap: break-word;
+  }
+}
+
+
+
+
+
 
