--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -154,6 +154,33 @@
 }
 
 
+.campaigns-to-sign .explanation .campaigns .campaign .petition-text {
+  border-top: 1px solid #ccc;
+  padding: 12px 20px;
+
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+.campaigns-to-sign .explanation .campaigns .campaign .petition-text .blockquote {
+  display: inline;
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 0;
+
+  // max-height: 120px;
+  // overflow: hidden;
+  // position: relative;
+}
+
+.campaigns-to-sign .explanation .campaigns .campaign .petition-text div.read-more {
+  cursor: pointer;
+  display: inline;
+  font-style: normal;
+  font-weight: 600;
+  margin-left: 5px;
+}
+
 .campaigns-to-sign .explanation .campaigns .campaign .target-details {
   border-top: 1px solid #ccc;
   padding: 12px 20px;
@@ -233,4 +260,8 @@
 
 #user-info-form #user-details #form-fields .form-group label {
   // margin-bottom: 4px;
+}
+
+#user-info-form #user-details #form-fields .form-group small {
+  color: #868e96
 }
