--- a/app/views/application/_petition_details.html.haml
+++ b/app/views/application/_petition_details.html.haml
@@ -5,7 +5,15 @@
         = petition.name
       %div.borough
         = borough_abbreviation(petition.borough)
-    %div.target-details.d-none
+
+  %div{class: "petition-details #{'d-none' unless show_detail}"}
+    %div.petition-text
+      %blockquote.blockquote{'data-full-letter' => petition.letter.gsub(/\n/, '<br>'), 'data-shortened-letter' => string_with_ellipses(petition.letter.gsub(/\n/, '<br>'))}
+        = "\"#{string_with_ellipses(petition.letter.gsub(/\n/, '<br>'), 200)}\""
+      %div.read-more
+        (read more)
+
+    %div.target-details
       %div.petition-delivery
         This petition will be delivered to:
       %ul.targets.list-group-flush
